--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-138247059-2"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-138247059-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'UA-138247059-2');
+    gtag('config', 'UA-138247059-1');
   </script>
   <meta charset="utf-8">
   <title>CloudKast - an online cloudformation template generator for busy developers.</title>
@@ -25,8 +25,8 @@
   <meta name="description" content="No writing JSON, no checking AWS documentation. Generate cloudformation templates in minutes." >
   <link rel="icon" type="image/x-icon" href="assets/img/cloudkast.ico">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<link rel="stylesheet" href="styles.1eee64a5bb65167573fc.css"></head>
+</head>
 <body class="mat-app-background mat-typography" >
   <app-root></app-root>
-<script type="text/javascript" src="runtime.a5dd35324ddfd942bef1.js"></script><script type="text/javascript" src="es2015-polyfills.4ce7b98e419ed6576ade.js" nomodule></script><script type="text/javascript" src="polyfills.6666d6f036b0cc510933.js"></script><script type="text/javascript" src="main.1135ddf7962b96f3b13b.js"></script></body>
+<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="es2015-polyfills.js" nomodule></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
 </html>
